--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
+		"svelte": "^4.2.18",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.0.0",
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@sveltestrap/sveltestrap": "^6.2.7",
 		"svelte-fa": "^4.0.2"
 	}
 }
