--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltestrap/sveltestrap": "^6.2.7",
-		"svelte-fa": "^4.0.2"
+		"svelte-fa": "^4.0.2",
+		"svelte-preprocess": "^6.0.1"
 	}
 }
