--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltestrap/sveltestrap": "^6.2.7",
 		"svelte-fa": "^4.0.2",
-		"svelte-preprocess": "^6.0.1"
+		"svelte-preprocess": "^6.0.1",
+		"taos": "^1.0.5"
 	}
 }
+	
